--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -47,10 +47,23 @@
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Показатель</span></a>
             </li>
-    
+            
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo1"
+                    aria-expanded="true" aria-controls="collapseTwo">
+                    <i class="fas fa-first-aid"></i>
+                    <span>Аптеки</span>
+                </a>
+                <div id="collapseTwo1" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <a class="collapse-item" href="/admin/pharmacy/add">Добавить аптеку </a>
+                        <a class="collapse-item" href="/admin/pharmacy">Список аптек</a>
+                    </div>
+                </div>
+            </li>
         
     
-            <!-- Nav Item - Pages Collapse Menu -->
+            <!-- Nav Item - Pages Collapse Menu 
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
                     aria-expanded="true" aria-controls="collapseTwo">
@@ -59,11 +72,13 @@
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="/client/add">Добавить клиента</a>
-                        <a class="collapse-item" href="/client">Управлять клиентом</a>
+                        <a class="collapse-item" href="/admin/add">Добавить клиента</a>
+                        <a class="collapse-item" href="/admin/pharmacies">Управлять клиентом</a>
                     </div>
                 </div>
-            </li>
+            </li>-->
+            
+            
     
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
@@ -84,7 +99,7 @@
                 </div>
             </li>
     
-            <!-- Nav Item - Pages Collapse Menu -->
+            <!-- Nav Item - Pages Collapse Menu 
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
                     aria-expanded="true" aria-controls="collapsePages">
@@ -97,7 +112,7 @@
                         <a class="collapse-item" href="#">Управление поставщиком</a>
                     </div>
                 </div>
-            </li>
+            </li>-->
             <!-- reports -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages1"
@@ -114,18 +129,9 @@
                 </div>
             </li>
     
-            <!-- Nav Item - Tables -->
-            <li class="nav-item">
-                <a class="nav-link" href="tables.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Tables</span></a>
-            </li>
             
-            <li class="nav-item">
-                <a class="nav-link" href="/admin/pharmacies">
-                    <i class="fas fa-fw fa-circle"></i>
-                    <span>Аптеки</span></a>
-            </li>
+            
+            
     
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
