--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -126,7 +126,15 @@
                     <i class="fas fa-fw fa-circle"></i>
                     <span>Аптеки</span></a>
             </li>
-    
+
+            <!-- na-sa -->
+            <li class="nav-item">
+                <a class="nav-link" href="/admin/drugs">
+                    <i class="fas fa-fw fa-square"></i>
+                    <span>Лекарства</span></a>
+            </li>
+            <!-- na-sa -->
+
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
     
