--- a/templates/admin/pharmacylist.html
+++ b/templates/admin/pharmacylist.html
@@ -28,6 +28,7 @@
                                         <tr>
                                             <th>id</th>
                                             <th>Название</th>
+                                            <th>Адрес</th>
                                             <th>Действие</th>
 
                                         </tr>
@@ -37,6 +38,7 @@
                                         <tr>
                                             <th>id</th>
                                             <th>Название</th>
+                                            <th>Адрес</th>
                                             <th>Действие</th>
                                         </tr>
                                     </tfoot>
@@ -46,6 +48,7 @@
                                         <tr>
                                             <td>{{i.id}}</td>
                                             <td>{{i.name}}</td>
+                                            <td>{{i.address}}</td>
                                             <td><a href="/client/edit/{{i.id}}"><i class="fas fa-pen"></i></a>
                                             </td>
                                         </tr>
