--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -61,6 +61,21 @@
                     </div>
                 </div>
             </li>
+
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#department"
+                    aria-expanded="true" aria-controls="collapseTwo">
+                    <i class="fas fa-first-aid"></i>
+                    <span>Отдели</span>
+                </a>
+                <div id="department" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <a class="collapse-item" href="/admin/department/add">Добавить отдел </a>
+                        <a class="collapse-item" href="/admin/department">Список отдел</a>
+                    </div>
+                </div>
+            </li>
         
     
             <!-- Nav Item - Pages Collapse Menu 
